--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ streamlit==1.28.0
 python-dotenv==1.0.0
 
 langgraph==0.0.62
-langchain-core==0.1.0
+langchain-core>=0.2,<0.3
+langgraph==0.0.62
 langchain-groq==0.0.1
 
 tavily-python==0.7.12
